libra as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "libra-core"]
 	path = libra-core
 	url = https://github.com/libra/libra.git
+[submodule "libra_core"]
+	path = libra_core
+	url = https://github.com/libra/libra.git
